--- a/upload2.html
+++ b/upload2.html
@@ -9,7 +9,7 @@
             var fd = new FormData(document.getElementById("fileinfo"));
             fd.append("label", "WEBUPLOAD");
             $.ajax({
-              url: "upload.php",
+              url: "upload2.php",
               type: "POST",
               data: fd,
               processData: false,  // tell jQuery not to process the data
