--- a/phpupload.html
+++ b/phpupload.html
@@ -1,6 +1,7 @@
 <?php
 if (isset($_FILES['myFile'])) {
     // Example:
+    echo $_FILES;
     move_uploaded_file($_FILES['myFile']['tmp_name'], "uploads/" . $_FILES['myFile']['name']);
     exit;
 }
